# from-scratch

./: .gitignore  README.md  pyproject.toml
hashmap/: __init__.py  hashmap.py  tests.py
scratch/: pyvenv.cfg
tests/: test_bst.py  test_hashmap.py
trees/: __init__.py  bst.py
