[tool.poetry]
name = "from-scratch"
version = "0.1.0"
description = "Data structures implemented from scratch in Python - HashMap and Binary Search Tree"
authors = ["jojo"]
readme = "README.md"
packages = [
    { include = "hashmap" },
    { include = "trees" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
